--- a/css/kiss/index.html
+++ b/css/kiss/index.html
@@ -28,7 +28,8 @@
             <h1>Welcome</h1>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Iure consectetur accusantium accusamus exercitationem ratione. Cupiditate provident excepturi consequatur nihil quisquam itaque, at delectus expedita illum nesciunt aliquid ipsam, blanditiis
-                alias?</p>
+                alias?
+            </p>
 
             <h2>Lorem ipsum dolor?</h2>
 
@@ -37,6 +38,7 @@
             <h2>Suspendisse potenti?</h2>
 
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Magni sint nisi dolores consequatur maxime iusto, accusamus, et eveniet dolor dolore similique. Aut debitis dolor voluptatum asperiores atque in fugiat quae!</p>
+            <br>
         </div>
         <div class="footer">
             <h4>Karl Jugapuu</h4>
